--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,55 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+   <servlet>
+    <description></description>
+    <display-name>login</display-name>
+    <servlet-name>login</servlet-name>
+    <servlet-class>login</servlet-class>
+    <init-param>
+      <param-name>db_url</param-name>
+      <param-value>silvaricci.westeurope.cloudapp.azure.com:3306/Durante_preferenzaJSP</param-value>
+    </init-param>
+    <init-param>
+      <param-name>db_usr</param-name>
+      <param-value>admin</param-value>
+    </init-param>
+    <init-param>
+      <param-name>db_psw</param-name>
+      <param-value>admin</param-value>
+    </init-param>
+  </servlet>
+     <servlet>
+    <description></description>
+    <display-name>signin</display-name>
+    <servlet-name>signin</servlet-name>
+    <servlet-class>signin</servlet-class>
+    <init-param>
+      <param-name>db_url</param-name>
+      <param-value>silvaricci.westeurope.cloudapp.azure.com:3306/Durante_preferenzaJSP</param-value>
+    </init-param>
+    <init-param>
+      <param-name>db_usr</param-name>
+      <param-value>admin</param-value>
+    </init-param>
+    <init-param>
+      <param-name>db_psw</param-name>
+      <param-value>admin</param-value>
+    </init-param>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>login</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>signin</servlet-name>
+    <url-pattern>/signin</url-pattern>
+  </servlet-mapping>
+  
+  <session-config>
+	<session-timeout>15</session-timeout>
+  </session-config>
+  
 </web-app>
